--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.2.3",
     "browser-sync": "^2.12.12",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-prettier": "^3.1.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.0.1",
     "gulp-babel": "^8.0.0",
@@ -12,6 +15,7 @@
     "gulp-concat": "^2.6.0",
     "gulp-connect": "^2.2.0",
     "gulp-csso": "^1.0.0",
+    "gulp-eslint": "^6.0.0",
     "gulp-file-include": "^1.0.0",
     "gulp-gh-pages": "^0.5.4",
     "gulp-imagemin": "^3.0.3",
@@ -27,12 +31,20 @@
     "gulp-util": "^3.0.6",
     "gulp.spritesmith": "^6.2.1",
     "merge-stream": "^1.0.0",
+    "prettier": "^1.18.2",
+    "prettier-eslint": "^9.0.1",
     "spritesmith": "^3.1.0",
     "stylelint": "^13.2.1",
     "stylelint-config-standard": "^20.0.0"
   },
   "dependencies": {
-    "gulp-eslint": "^6.0.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "gulp-flowtype": "^1.0.0",
+    "gulp-if": "^3.0.0",
     "jquery": "^3.3.1",
     "natives": "^1.1.5"
   }
