--- a/.eslintrc
+++ b/.eslintrc
@@ -9,16 +9,16 @@
 
   "env": {
     "es6": true,
-    "node": true
+    "node": true,
+    "jquery": true
   },
-
   "plugins": [
     "node",
     "standard"
   ],
 
   "globals": {
-    "document": "readonly",
+    "docu'import/first'ment": "writable",
     "navigator": "readonly",
     "window": "readonly"
   },
@@ -49,7 +49,7 @@
     "func-call-spacing": ["error", "never"],
     "generator-star-spacing": ["error", { "before": true, "after": true }],
     "handle-callback-err": ["error", "^(err|error)$" ],
-    "indent": ["error", 2, {
+    "indent": ["error", 4, {
       "SwitchCase": 1,
       "VariableDeclarator": 1,
       "outerIIFEBody": 1,
@@ -197,17 +197,9 @@
     "yield-star-spacing": ["error", "both"],
     "yoda": ["error", "never"],
 
-    "import/export": "error",
-    "import/first": "error",
-    "import/no-absolute-path": ["error", { "esmodule": true, "commonjs": true, "amd": false }],
-    "import/no-duplicates": "error",
-    "import/no-named-default": "error",
-    "import/no-webpack-loader-syntax": "error",
-
     "node/no-deprecated-api": "error",
     "node/process-exit-as-throw": "error",
 
-    "promise/param-names": "error",
 
     "standard/no-callback-literal": "error"
   }
