--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gulp-gh-pages": "^0.5.4",
     "gulp-imagemin": "^3.0.3",
     "gulp-js-import": "^1.0.6",
+    "gulp-minify": "^3.1.0",
     "gulp-minify-html": "^1.0.6",
     "gulp-notify": "^2.2.0",
     "gulp-sass": "^3.2.1",
@@ -40,7 +41,6 @@
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "gulp-if": "^3.0.0",
     "jquery": "^3.3.1",
     "natives": "^1.1.5"
   }
